# tint

./: .gitignore  BUILD.gn  CMakeLists.txt  CMakeSettings.json  DEPS  Doxyfile  README.md  build_emscripten_rob.py
build_overrides/: tint.gni
infra/config/global/: main.star
kokoro/linux/: docker.sh
kokoro/windows/: build.bat
src/tint/: CMakeLists.txt
src/tint/constant/: constant.cc
src/tint/wgsl-debugger/: CMakeLists.txt  debug_transform.cpp  debug_transform.h  embind.cpp  get_syntax_tree.cpp  get_syntax_tree.hpp  get_wgsl.cpp  get_wgsl.hpp  index.html  main.cpp  wgsl_debugger_support_api.h
src/tint/writer/spirv/: builder.cc  builder_builtin_test.cc  builder_builtin_texture_test.cc  builder_type_test.cc
